format and update docs
