# docs/swagger.json
@@ -480,6 +480,12 @@
                             "$ref": "#/definitions/httpErrors.RestError"
                         }
                     },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/httpErrors.RestError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
